# freecad-robust-mcp-and-more

./: .coderabbit.yaml  .codespell-ignore-words.txt  .dockerignore  .gitignore  .gitleaks.toml  .mise.toml  .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  .secrets.baseline  .trivyignore  ARCHITECTURE-MCP.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  justfile  mkdocs.yaml  package.xml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yaml
.github/actions/setup-freecad/: action.yaml
.github/workflows/: codeql.yaml  docker-release.yaml  docker.yaml  docs.yaml  macro-cut-magnets-release.yaml  macro-multi-export-release.yaml  macro-release-reusable.yaml  macro-release.yaml  macro-test.yaml  mcp-server-release.yaml  mcp-workbench-release.yaml  pre-commit.yaml  pypi-release.yaml  test.yaml
0.6.1/: 404.html  index.html  objects.inv  sitemap.xml  variables.yaml
0.6.1/COMPARISON/: index.html
0.6.1/MCP_TOOLS_REFERENCE/: index.html
0.6.1/USER_GUIDE/: index.html
0.6.1/api/bridge/: index.html
0.6.1/api/config/: index.html
0.6.1/api/server/: index.html
0.6.1/development/architecture/: index.html
0.6.1/development/architecture-detailed/: index.html
0.6.1/development/contributing/: index.html
0.6.1/development/mkdocs-guide/: index.html
0.6.1/development/releasing/: index.html
0.6.1/getting-started/configuration/: index.html
0.6.1/getting-started/installation/: index.html
0.6.1/getting-started/quickstart/: index.html
0.6.1/guide/connection-modes/: index.html
0.6.1/guide/macros/: index.html
0.6.1/guide/resources/: index.html
0.6.1/guide/tools/: index.html
0.6.1/guide/workbench/: index.html
0.6.1/search/: search_index.json
addon/FreecadRobustMCP/: Init.py  InitGui.py  commands.py  path_utils.py  status_widget.py
addon/FreecadRobustMCP/freecad_mcp_bridge/: __init__.py  blocking_bridge.py  bridge_utils.py  headless_server.py  server.py  startup_bridge.py
addon/FreecadRobustMCPBridge/: Init.py  InitGui.py  RELEASE_NOTES.md  wiki-source.txt
addon/FreecadRobustMCPBridge/freecad_mcp_bridge/: __init__.py  blocking_bridge.py  bridge_utils.py  server.py  startup_bridge.py
docs/: COMPARISON.md  USER_GUIDE.md  index.md  variables.yaml
docs/api/: bridge.md  config.md  server.md
docs/development/: architecture-detailed.md  architecture.md  contributing.md  mkdocs-guide.md  releasing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: connection-modes.md  macros.md  resources.md  tools.md  workbench.md
just/: coderabbit.just  dev.just  docker.just  documentation.just  freecad.just  install.just  mcp.just  quality.just  release.just  testing.just
latest/: 404.html  index.html  sitemap.xml
latest/COMPARISON/: index.html
latest/MCP_TOOLS_REFERENCE/: index.html
latest/USER_GUIDE/: index.html
latest/api/bridge/: index.html
latest/api/config/: index.html
latest/api/server/: index.html
latest/development/architecture/: index.html
latest/development/architecture-detailed/: index.html
latest/development/contributing/: index.html
latest/development/mkdocs-guide/: index.html
latest/development/releasing/: index.html
latest/getting-started/configuration/: index.html
latest/getting-started/installation/: index.html
latest/getting-started/quickstart/: index.html
latest/guide/connection-modes/: index.html
latest/guide/macros/: index.html
latest/guide/resources/: index.html
latest/guide/tools/: index.html
latest/guide/workbench/: index.html
latest/search/: search_index.json
macros/Cut_Object_for_Magnets/: CutObjectForMagnets.FCMacro  README-CutObjectForMagnets.md  RELEASE_NOTES.md  wiki-source.txt
macros/Multi_Export/: MultiExport.FCMacro  README-MultiExport.md  RELEASE_NOTES.md  wiki-source.txt
macros/Start_MCP_Bridge/: README-StartMCPBridge.md  StartMCPBridge.FCMacro
scripts/: bridge-helpers.sh  release-helpers.sh
src/freecad_mcp/: RELEASE_NOTES.md  __init__.py  server.py
src/freecad_mcp/bridge/: xmlrpc.py
src/freecad_mcp/prompts/: freecad.py
src/freecad_mcp/resources/: freecad.py
src/freecad_mcp/tools/: documents.py  execution.py  export.py  macros.py  objects.py  partdesign.py  view.py
tests/: __init__.py
tests/ci-test/: run-gui-test.sh  setup-freecad.sh
tests/integration/: conftest.py  test_cut_object_for_magnets.py  test_gui_mode.py  test_headless_mode.py  test_multi_export.py  test_thread_safety.py
tests/just_commands/: __init__.py  conftest.py  test_coderabbit.py  test_dev.py  test_docker.py  test_documentation.py  test_freecad.py  test_install.py  test_listing.py  test_main.py  test_mcp.py  test_post_checks.py  test_quality.py  test_release.py  test_testing.py
tests/unit/: __init__.py  test_resources.py  test_server.py  test_tools_documents.py  test_tools_execution.py  test_tools_export.py  test_tools_macros.py  test_tools_objects.py  test_tools_partdesign.py  test_tools_view.py
tests/unit/addon/: __init__.py  test_addon_structure.py
